# data-warehouse

./: .env.example  .gitignore  Makefile  PROJECT_GUIDE.md  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dbt_project/: dbt_project.yml
dbt_project/macros/: generate_schema_name.sql
dbt_project/models/marts/: _marts__models.yml  dim_geography.sql  dim_time.sql  fct_crime.sql  fct_economics.sql  fct_housing.sql  fct_quality_of_life.sql
dbt_project/models/staging/: _staging__models.yml  stg_bls.sql  stg_census.sql  stg_fbi_crime.sql  stg_hud.sql  stg_numbeo.sql
dbt_project/seeds/: county_fips_codes.csv  state_fips_codes.csv
docker/: docker-compose.yml
docker/postgres/: init.sql
docker/superset/: Dockerfile  superset_config.py
frontend/: app.py
frontend/maps/: map_builder.py
frontend/static/css/: style.css
frontend/static/js/: charts.js
frontend/templates/: base.html  index.html  map.html
glue/: transform-catt-times.py  transform-episodes.py  transform-narratives.py
infrastructure/redshift/: create_schemas.sql  iam_policy.json
ingestion/: base.py  bls.py  census.py  fbi_crime.py  hud.py  numbeo.py  utils.py
ingestion/tests/: test_bls.py
redshift/: schema.sql
scripts/: run_ingestion.py  setup-aws.sh
src/: sharepoint-extractor.js
